Fix bug for kanban card unable to shift around

--- a/app/ImpactLaunchSpace/src/main/webapp/resources/css/project/project_management.css
+++ b/app/ImpactLaunchSpace/src/main/webapp/resources/css/project/project_management.css
@@ -1,10 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed);
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
-<<<<<<< Updated upstream
-=======
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
->>>>>>> Stashed changes
 
 #sortableToDo, #sortableInProgress, #sortableDone {
     border: 1px solid #eee;
@@ -83,12 +80,8 @@
 }
 
 .project-management-container .tabs-bordered{
-<<<<<<< Updated upstream
-	border-bottom: 2px solid rgba(152, 166, 173, 0.2) !important;
-=======
 	/* border-bottom: 2px solid rgba(152, 166, 173, 0.2) !important; */
 	border-bottom: 0.2em solid #311957 !important;
->>>>>>> Stashed changes
 }
 
 .project-management-container .nav-tabs .nav-justified{
@@ -150,8 +143,6 @@
 
 #sidebar-menu .btn-bordered{
 	background: transparent !important;
-<<<<<<< Updated upstream
-=======
 }
 
 #sidebar-menu .project-description{
@@ -180,5 +171,4 @@
 
 .project-management-container .tabs-header{
 	font-family: 'Quicksand', sans-serif;
->>>>>>> Stashed changes
 }
